--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ on:
   workflow_dispatch:
   schedule:
     # IMPORTANT: Set cron job in UTC timezone
-    - cron:  '0 18 * * *'
+    - cron:  '0 * * * *'
 
 jobs:
   run-python-script:
@@ -12,6 +12,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.9.12'
+          python-version: '3.8.0'
       - run: pip install requests
       - run: python ./ipchange.py
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "yeqingyeqing"
+          git config --global user.email "1114178540@qq.com"
+          git add .
+          git commit -m "Update files"
+          git push
