--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       - run: python ./ipchange.py
       - name: Commit and push changes
         run: |
-          git config --global user.name "yeqingyeqing"
-          git config --global user.email "1114178540@qq.com"
+          git config --global user.name ${{ secrets.EMAIL }}
+          git config --global user.email ${{ secrets.NAME }}
           git add .
           git commit -m "Update files"
           git push
